[gd_scene load_steps=3 format=3 uid="uid://mt0vlqo81wmg"]

[ext_resource type="Script" uid="uid://cp0yuhxytweqw" path="res://script/doc_text.gd" id="1_wy5ll"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wy5ll"]
resource_local_to_scene = true

[node name="doc_text" type="Label" groups=["texts"]]
offset_right = 57.0
offset_bottom = 23.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
script = ExtResource("1_wy5ll")
intended_struct = 2

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(28, 10)
shape = SubResource("RectangleShape2D_wy5ll")

[node name="highlight" type="Line2D" parent="."]
closed = true
width = 2.0
default_color = Color(1, 0.611765, 0, 1)

[connection signal="deselect" from="." to="." method="_on_deselect"]
[connection signal="selected" from="." to="." method="_on_selected"]
[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
